--- a/common.qrc
+++ b/common.qrc
@@ -75,5 +75,8 @@
     <file alias="qml/AboutPage.qml">src/qml/AboutPage.qml</file>
     <file alias="qml/HelpPage.qml">src/qml/HelpPage.qml</file>
     <file alias="qml/ToolBar.qml">src/qml/ToolBar.qml</file>
+    <file alias="qml/main.qml">src/qml/main.qml</file>
+    <file alias="qml/JewelPage.qml">src/qml/JewelPage.qml</file>
+    <file alias="qml/ScrollBar.qml">src/qml/ScrollBar.qml</file>
   </qresource>
 </RCC>
